# telco-churn-prediction

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml  start_server.sh
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_hyperparameter_tuning.ipynb  05_model_interpretability.ipynb  churn_prediction_complete.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
scripts/: copy_models_to_serving.py  prepare_processed_data.py  run_pipeline.py  test_fastapi.py  test_pipeline_phase1_data_features.py  test_pipeline_phase2_modeling.py
src/: config.py
src/app/: main.py
src/data/: load_data.py  preprocess.py
src/features/: build_features.py
src/models/: __init__.py  risk_scoring.py
src/serving/: inference.py
src/utils/: __init__.py  validate_data.py
